--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemailer": "^7.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1"
   },
